--- a/references.bib
+++ b/references.bib
@@ -15,7 +15,7 @@
 	year={2017}
 }
 
-@article{hoshen2018iterative,
+@article{hoshen2018tive,
 	title={An Iterative Closest Point Method for Unsupervised Word Translation},
 	author={Hoshen, Yedid and Wolf, Lior},
 	journal={arXiv preprint arXiv:1801.06126},
@@ -328,4 +328,53 @@
 	author={Coulmance, Jocelyn and Marty, Jean-Marc and Wenzek, Guillaume and Benhalloum, Amine},
 	journal={arXiv preprint arXiv:1601.02502},
 	year={2016}
+}
+
+
+@article{ammar2016massively,
+	title={Massively multilingual word embeddings},
+	author={Ammar, Waleed and Mulcaire, George and Tsvetkov, Yulia and Lample, Guillaume and Dyer, Chris and Smith, Noah A},
+	journal={arXiv preprint arXiv:1602.01925},
+	year={2016}
+}
+
+@inproceedings{dhillon2011multi,
+	title={Multi-view learning of word embeddings via cca},
+	author={Dhillon, Paramveer and Foster, Dean P and Ungar, Lyle H},
+	booktitle={Advances in neural information processing systems},
+	pages={199--207},
+	year={2011}
+}
+
+@inproceedings{lu2015deep,
+	title={Deep multilingual correlation for improved word embeddings},
+	author={Lu, Ang and Wang, Weiran and Bansal, Mohit and Gimpel, Kevin and Livescu, Karen},
+	booktitle={Proceedings of the 2015 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies},
+	pages={250--256},
+	year={2015}
+}
+
+@inproceedings{faruqui2014improving,
+	title={Improving vector space word representations using multilingual correlation},
+	author={Faruqui, Manaal and Dyer, Chris},
+	booktitle={Proceedings of the 14th Conference of the European Chapter of the Association for Computational Linguistics},
+	pages={462--471},
+	year={2014}
+}
+
+@article{DBLP:journals/corr/abs-1804-07745,
+	author    = {Armand Joulin and
+	Piotr Bojanowski and
+	Tomas Mikolov and
+	Edouard Grave},
+	title     = {Improving Supervised Bilingual Mapping of Word Embeddings},
+	journal   = {CoRR},
+	volume    = {abs/1804.07745},
+	year      = {2018},
+	url       = {http://arxiv.org/abs/1804.07745},
+	archivePrefix = {arXiv},
+	eprint    = {1804.07745},
+	timestamp = {Mon, 13 Aug 2018 16:49:17 +0200},
+	biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1804-07745},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
 }
